var searchData=
[
  ['unset_5429',['UNSET',['../classoperations__research_1_1_p_r_o_t_o_b_u_f___f_i_n_a_l.html#a3a3d1c0bc76ce946dd0fcd8c39581368',1,'operations_research::PROTOBUF_FINAL::UNSET()'],['../classoperations__research_1_1_p_r_o_t_o_b_u_f___f_i_n_a_l.html#a06c6c05a1d62d0112d7b4fc12cc8dd47',1,'operations_research::PROTOBUF_FINAL::UNSET()']]],
  ['unvisitable_5fnodes_5ffprint_5430',['unvisitable_nodes_fprint',['../structoperations__research_1_1_routing_model_1_1_vehicle_class.html#ad0f12c443e4158fdb27375de6fe0fb95',1,'operations_research::RoutingModel::VehicleClass']]],
  ['use_5flast_5fconflict_5431',['use_last_conflict',['../structoperations__research_1_1_default_phase_parameters.html#aa978cbe8453310a6381350d867821e0c',1,'operations_research::DefaultPhaseParameters']]],
  ['use_5fneighbors_5fratio_5ffor_5finitialization_5432',['use_neighbors_ratio_for_initialization',['../structoperations__research_1_1_global_cheapest_insertion_filtered_heuristic_1_1_global_cheapest_insertion_parameters.html#a7d91387b5081be8f22d053d93eb9edf4',1,'operations_research::GlobalCheapestInsertionFilteredHeuristic::GlobalCheapestInsertionParameters']]]
];
